--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                 <div class="row">
                     <div class="mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto; margin-top: 250px;">
                         <h1 id="gradient">Amusing Keypad</h1>
-                        <h5 style="text-align: right;">Made by Antecer</h5>
+                        <h5 style="text-shadow: 0px 0px 2px #000000; text-align: right;">Made by Antecer</h5>
                         <hr />
-                        <p style="text-align: right; margin-top: 50px;">Dev by <a style="color: #f4c989 !important;">Steve2312</a> & <a style="color: #f4c989 !important;">Ramen</a> & <a style="color: #f4c989 !important;">Antecer</a>; </p>
+                        <p style="text-shadow: 0px 0px 2px #000000; text-align: right; margin-top: 50px;">Dev by <a style="color: #f4c989 !important;">Steve2312</a> & <a style="color: #f4c989 !important;">Ramen</a> & <a style="color: #f4c989 !important;">Antecer</a>; </p>
                         <div class="trackBar" style="margin-top: 50px;">
                             <input id="tracking_number" type="text" placeholder="Tracking Number">
                             <input id="tracker_button" onclick="submit()" type="button" value="Track">
@@ -58,7 +58,7 @@
             <div class="col-md-8 animated bounceInRight" style="display:block; margin-top: 100px;">
                 <div class="row">
                     <div class="mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                        <img src="7.png" style="height: 900px;">
+                        <img src="7.png" style="width: 90%;">
                     </div>
                 </div>
             </div>
@@ -66,12 +66,12 @@
 
         <hr style="margin-top: 70px;" />
 
-        <div class="row" style="margin-top: 20px; margin-bottom: 1000px;">
+        <div class="row" style="margin-top: 20px;">
             <h1 id="firstrowtitle" class="animated slideInUp fadeIn" style="margin-bottom: 50px; display:none">A <a class="animationdelay2s" id="gradient">keypad</a> is everything you need!</h1>
             <div id="firstrow" class="col-md-6 animated2 slideInLeft fadeIn" style="display:none;">
                 <div class="row">
                     <div class="keypadall mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                        <img src="2.png" />
+                        <img src="2.png"/>
                     </div>
                 </div>
             </div>
