--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
     <nav id="navbar" class="navbar navbar-inverse navbar-fixed-top animated fadeInDown stickyfirst" role="navigation">
         <div class="container" style="margin-top: 5px;">
-            <div class="navbar-header">
+            <div class="navbar-header left">
                 <a style="color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon" href="">
                     <b>Antecer</b>
                 </a>
             </div>
 
-            <div class="navbar-header hz-nav">
+            <div class="navbar-header hz-nav right">
                 <ul class="navbar-right">
                     <li><a href="" target="_blank"><i class="fas fa-home"></i>Home</a></li>
                     <li><a href="" target="_blank"><i class="fas fa-archive"></i>Protucts</a></li>
