--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Antecer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="index, follow">
+    <meta charset="UTF-8">
+    <meta name="author" content="Antecer">
+    <meta name="keywords" content="osu,osu!,keypad,keypad switch,mini keypad,gaming keypad,usb keypad, osu keypad,keyboard,antecer,antecer keypad,programmable keypad,osu nono,mechanical keypad,cherry mx,amusingkeypad ">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/main.css" rel="stylesheet" type="text/css">
