--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Antecer">
     <meta name="keywords" content="osu,osu!,keypad,keypad switch,mini keypad,gaming keypad,usb keypad, osu keypad,keyboard,antecer,antecer keypad,programmable keypad,osu nono,mechanical keypad,cherry mx,amusingkeypad ">
+    <meta name="description" content="The AmusingKeypad is a keypad specially designed for the osu! game that allows the swapping of mechanical switches and easy portability.">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/main.css" rel="stylesheet" type="text/css">
@@ -37,76 +38,79 @@
             </div>
         </div>
     </nav>
-    <div class="fixed-nav-img">
-        <img src="1.jpg" style="opacity: 0.7; filter: alpha(opacity=70);" />
-    </div>
-    <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
-        <div class="row">
+    <div class="banner-nav-img">
+        <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
+            <div class="row">
 
-            <div class="col-md-4 animated bounceInLeft" style="display:block; margin-top: 100px;">
-                <div class="row">
-                    <div class="mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto; margin-top: 250px;">
-                        <h1 id="gradient">Amusing Keypad</h1>
-                        <h5 style="text-shadow: 0px 0px 2px #000000; text-align: right;">Made by Antecer</h5>
-                        <hr />
-                        <p style="text-shadow: 0px 0px 2px #000000; text-align: right; margin-top: 50px;">Dev by <a style="color: #f4c989 !important;">Steve2312</a> & <a style="color: #f4c989 !important;">Ramen</a> & <a style="color: #f4c989 !important;">Antecer</a>; </p>
-                        <div class="trackBar" style="margin-top: 50px;">
-                            <input id="tracking_number" type="text" placeholder="Tracking Number">
-                            <input id="tracker_button" onclick="submit()" type="button" value="Track">
+                <div class="col-md-4 animated bounceInLeft" style="display:block; margin-top: 100px;">
+                    <div class="row">
+                        <div class="mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto; margin-top: 250px;">
+                            <h1 id="gradient">Amusing Keypad</h1>
+                            <h5 style="text-shadow: 0px 0px 2px #000000; text-align: right;">Made by Antecer</h5>
+                            <hr />
+                            <p style="text-shadow: 0px 0px 2px #000000; text-align: right; margin-top: 50px;">Dev by <a style="color: #f4c989 !important;">Steve2312</a> & <a style="color: #f4c989 !important;">Ramen</a> & <a style="color: #f4c989 !important;">Antecer</a>; </p>
+                            <div class="trackBar" style="margin-top: 50px;">
+                                <input id="tracking_number" type="text" placeholder="Tracking Number">
+                                <input id="tracker_button" onclick="submit()" type="button" value="Track">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-8 animated bounceInRight" style="display:block; margin-top: 100px;">
+                    <div class="row">
+                        <div class="mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
+                            <img src="7.png" style="width: 90%;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        </div>
+        <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
+
+            <hr style="margin-top: 70px;" />
+
+            <div class="row" style="margin-top: 20px;">
+                <h1 id="firstrowtitle" class="animated slideInUp fadeIn" style="margin-bottom: 50px; display:none">A <a class="animationdelay2s" id="gradient">keypad</a> is everything you need!</h1>
+                <div id="firstrow" class="col-md-6 animated2 slideInLeft fadeIn" style="display:none;">
+                    <div class="row">
+                        <div class="keypadall mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
+                            <img src="2.png" />
+                        </div>
+                    </div>
+                </div>
+                <div id="firstrow2" class="col-md-6 animated2 slideInRight fadeIn" style="display:none;">
+                    <div class="row">
+                        <div class="keypadall mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
+                            <p>Package information: Plz Antecer gibe us the package descript :P</p>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="col-md-8 animated bounceInRight" style="display:block; margin-top: 100px;">
-                <div class="row">
-                    <div class="mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                        <img src="7.png" style="width: 90%;">
+            <hr style="margin-top: 70px;" />
+
+            <div class="row">
+                <div class="col-md-12" style="display:block;">
+                    <div class="row">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12" style="display:block;">
+                    <div class="row">
                     </div>
                 </div>
             </div>
         </div>
-
-        <hr style="margin-top: 70px;" />
-
-        <div class="row" style="margin-top: 20px;">
-            <h1 id="firstrowtitle" class="animated slideInUp fadeIn" style="margin-bottom: 50px; display:none">A <a class="animationdelay2s" id="gradient">keypad</a> is everything you need!</h1>
-            <div id="firstrow" class="col-md-6 animated2 slideInLeft fadeIn" style="display:none;">
-                <div class="row">
-                    <div class="keypadall mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                        <img src="2.png" />
-                    </div>
-                </div>
-            </div>
-            <div id="firstrow2" class="col-md-6 animated2 slideInRight fadeIn" style="display:none;">
-                <div class="row">
-                    <div class="keypadall mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                        <p>Package information: Plz Antecer gibe us the package descript :P</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <hr style="margin-top: 70px;" />
-
-        <div class="row">
-            <div class="col-md-12" style="display:block;">
-                <div class="row">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12" style="display:block;">
-                <div class="row">
-                </div>
-            </div>
-        </div>
-    </div>
-    <script>
-        $(document).ready(function () {
-            $(this).scrollTop(0);
-        });
-    </script>
+        <script>
+            $(document).ready(function () {
+                $(this).scrollTop(0);
+            });
+        </script>
 </body>
 
 </html>
