--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
             <hr style="margin-top: 70px;" />
 
             <div class="row" style="margin-top: 20px;">
-                <h1 id="firstrowtitle" class="animated slideInUp fadeIn" style="margin-bottom: 50px; display:none">A <a class="animationdelay2s" id="gradient">keypad</a> is everything you need!</h1>
-                <div id="firstrow" class="col-md-6 animated2 slideInLeft fadeIn" style="display:none;">
+                <h1 id="firstrowtitle" class="animated fadeIn" style="margin-bottom: 50px; display:none">A <a class="animationdelay2s" id="gradient">keypad</a> is everything you need!</h1>
+                <div id="firstrow" class="col-md-6 animated2  fadeIn" style="display:none;">
                     <div class="row">
                         <div class="keypadall mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
                             <img src="2.png" />
                         </div>
                     </div>
                 </div>
-                <div id="firstrow2" class="col-md-6 animated2 slideInRight fadeIn" style="display:none;">
+                <div id="firstrow2" class="col-md-6 animated2  fadeIn" style="display:none;">
                     <div class="row">
                         <div class="keypadall mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
                             <p>Package information: Plz Antecer gibe us the package descript :P</p>
