--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                 <div class="col-md-4 animated bounceInLeft" style="display:block; margin-top: 100px;">
                     <div class="row">
-                        <div class="mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto; margin-top: 250px;">
+                        <div class="mx-auto d-block marginamusingtext" style="justify-content: center; align-content: center; margin-bottom: auto;">
                             <h1 id="gradient">Amusing Keypad</h1>
                             <h5 style="text-shadow: 0px 0px 2px #000000; text-align: right;">Made by Antecer</h5>
                             <hr />
@@ -60,7 +60,7 @@
                 <div class="col-md-8 animated bounceInRight" style="display:block; margin-top: 100px;">
                     <div class="row">
                         <div class="mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                            <img src="7.png" style="width: 90%;">
+                            <img class="logo" src="7.png">
                         </div>
                     </div>
                 </div>
