--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="navbar-header hz-nav right">
                 <ul class="navbar-right">
                     <li><a href="" target="_blank"><i class="fas fa-home"></i>Home</a></li>
-                    <li><a href="" target="_blank"><i class="fas fa-archive"></i>Protucts</a></li>
+                    <li><a href="" target="_blank"><i class="fas fa-archive"></i>Products</a></li>
                     <li><a href=""><i class="fas fa-terminal"></i>Drivers</a></li>
                     <li><a href="" target="_blank"><i class="fas fa-palette"></i>Customization</a></li>
                     <li><a href="" target="_blank"><i class="fas fa-file-signature"></i>Contact</a></li>
