--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <h1 id="gradient">Amusing Keypad</h1>
                             <h5 style="text-shadow: 0px 0px 2px #000000; text-align: right;">Made by Antecer</h5>
                             <hr />
-                            <p style="text-shadow: 0px 0px 2px #000000; text-align: right; margin-top: 50px;">Dev by <a style="color: #f4c989 !important;">Steve2312</a> & <a style="color: #f4c989 !important;">Ramen</a> & <a style="color: #f4c989 !important;">Antecer</a>; </p>
+                            <p style="text-shadow: 0px 0px 2px #000000; text-align: right; margin-top: 50px;">Dev by <a style="color: #f4c989 !important;">Steve2312</a> & <a style="color: #f4c989 !important;">Ramen</a> & <a style="color: #f4c989 !important;">Stubbs</a> & <a style="color: #f4c989 !important;">Antecer</a></p>
                             <div class="trackBar" style="margin-top: 50px;">
                                 <input id="tracking_number" type="text" placeholder="Tracking Number">
                                 <input id="tracker_button" onclick="submit()" type="button" value="Track">
