--- a/index.html
+++ b/index.html
@@ -82,13 +82,76 @@
                         </div>
                     </div>
                 </div>
-                <div id="firstrow2" class="col-md-6 animated2  fadeIn" style="display:none;">
-                    <div class="row">
-                        <div class="keypadall mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                            <p>Package information: Plz Antecer gibe us the package descript :P</p>
-                        </div>
-                    </div>
-                </div>
+                <div id="firstrow2" class="col-md-6 animated2  fadeIn" style="display: block;">
+<div class="row">
+<div class="keypadall mx-auto d-block" style="justify-content: left; align-content: left; margin-bottom: auto; text-align: left !important;">
+<style>
+                          .tableInfo, .tableInfo tr th, .tableInfo tr td {
+                            border: 1px solid #000000;
+                          }
+                          .tableInfo {
+                            width: 548px;
+                            height: 256px;
+                            line-height: 25px;
+                            text-align: center;
+                            border-collapse: collapse;
+                            padding: 2px;
+                            margin-left: 10px;
+                          }
+                        </style>
+<p>The <strong>AmusingKeypad</strong> is a special osu! Game design and development of keyboard products.</p>
+<p><strong>Product introduction:</strong></p>
+<ul>
+<li><strong>Custom Buttons</strong> - You can bind any number of normal key values to the same button to achieve the
+same input.</li>
+<li><strong>Multimedia support</strong> - Play, Pause, Next, Prev, Vol+, Vol-, Mute, and other keycodes.</li>
+<li><strong>Simulate mouse</strong> - You can use it to do some mouse work, such as Left button, right button, wheel,
+and absolute coordinates positioning.</li>
+<li><strong>Light display</strong> - It contains multiple rgb-led, and you can specify different colors or display
+modes for each Led.</li>
+<li><strong>Response speed</strong> - It uses a special key-switch filter algorithm to achieve the fastest press
+trigger speed.</li>
+<li><strong>Boot Loader</strong> - Built-in boot loader so that it can always get the latest features and ideas.</li>
+<li><strong>Configuration</strong> - It has a portable Windows software to change the configuration, the new
+configuration will be stored in the keyboard chip, even if you connect it to other devices can be used.</li>
+</ul>
+<table>
+<tbody>
+<tr>
+<td>
+<table class="tableInfo">
+<thead>
+<tr>
+<th style="text-align:center">Item</th>
+<th style="text-align:center">Description</th>
+ </tr>
+</thead>
+<tbody>
+<tr>
+<td style="text-align:center">Data interface</td>
+<td style="text-align:center">USB2.0 Type-C</td>
+</tr>
+<tr>
+<td style="text-align:center">Key Switches</td>
+<td style="text-align:center">You can use any switch that is compatible with cherry</td>
+</tr>
+<tr>
+<td style="text-align:center">Small button</td>
+<td style="text-align:center">Use silicone key cap, feel more comfortable</td>
+</tr>
+<tr>
+<td style="text-align:center">Non-slip Mat</td>
+<td style="text-align:center">Washable and clean sticky pad</td>
+</tr>
+</tbody>
+</table>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+</div>
             </div>
 
             <hr style="margin-top: 70px;" />
