--- a/driver/index.html
+++ b/driver/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -42,9 +42,9 @@
 
     <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
         <div class="row">
-            <div class="col-md-4 animated bounceInLeft" style="display:block; margin-top: 100px;">
+            <div class="col-md-4 animated bounceInLeft" style="display:block;">
                 <div class="row">
-                    <div class="mx-auto d-block marginamusingtext" style="justify-content: center; align-content: center; margin-top: 0px; margin-bottom: auto;">
+                    <div class="mx-auto d-block downloaddriver" style="justify-content: center; align-content: center; margin-bottom: auto;">
                         <h1 id="gradient">Downloads</h1>
                         <hr />
                         <div class="trackBar" style="margin-top: 50px;">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-8 animated bounceInRight" style="display:block; margin-top: 110px;">
+            <div class="col-md-8 animated bounceInRight driverss" style="display:block;">
                 <div class="row">
                     <div class="mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
                         <img src="ui-1.jpg" style="width:45%;margin-bottom:5px;">
