--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="col-md-7 animated bounceInRight marginlogo" style="display:block;">
                     <div class="row">
                         <div class="mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                            <img class="logo" src="7.png">
+                            <img class="logo" src="images/7.png">
                         </div>
                     </div>
                 </div>
@@ -78,8 +78,8 @@
             <div class="col-md-6 animated2  fadeIn" style="display:block;">
                 <div class="row">
                     <div class="keypadall mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
-                        <img src="2.0.png" />
-                        <img src="2.1.png" />
+                        <img src="images/2.0.png" />
+                        <img src="images/2.1.png" />
                     </div>
                 </div>
             </div>
