--- a/index.html
+++ b/index.html
@@ -107,27 +107,8 @@
             </div>
             <div class="col-md-6 animated2 fadeIn" style="display: block;">
                 <div class="row">
-                    <div class="mx-auto" style="justify-content: left; align-content: left; margin-bottom: auto; text-align: left !important;">
+                    <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: left !important;">
                         <div style="margin: 30px;">
-                            <style>
-                                .tableInfo, .tableInfo tr th, .tableInfo tr td {
-                                    border: 1px solid #000000;
-                                }
-
-                                .tableInfo {
-                                    width: 110%;
-                                    height: 256px;
-                                    line-height: 25px;
-                                    text-align: center;
-                                    border-collapse: collapse;
-                                    padding: 2px;
-                                    margin-left: 10px;
-                                }
-
-                                    .tableInfo th {
-                                        margin: 10px;
-                                    }
-                            </style>
                             <p>The <strong>AmusingKeypad</strong> is a special osu! Game design and development of keyboard products.</p>
                             <p><strong>Product introduction:</strong></p>
                             <ul>
@@ -153,38 +134,27 @@
                                     <strong>Configuration</strong> - It has a portable Windows software to change the configuration, the new
                                     configuration will be stored in the keyboard chip, even if you connect it to other devices can be used.
                                 </li>
-                            </ul>
-                            <table style="margin-top: 100px;">
+                            </ul>                       
+
+                            <table class="table" style="margin-top: 100px;">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Item</th>
+                                        <th scope="col">Description</th>
+                                    </tr>
+                                </thead>
                                 <tbody>
                                     <tr>
-                                        <td>
-                                            <table class="tableInfo">
-                                                <thead>
-                                                    <tr>
-                                                        <th style="text-align:center">Item</th>
-                                                        <th style="text-align:center">Description</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    <tr>
-                                                        <td style="text-align:center">Data interface</td>
-                                                        <td style="text-align:center">USB2.0 Type-C</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td style="text-align:center">Key Switches</td>
-                                                        <td style="text-align:center">You can use any switch that is compatible with cherry</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td style="text-align:center">Small button</td>
-                                                        <td style="text-align:center">Use silicone key cap, feel more comfortable</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td style="text-align:center">Non-slip Mat</td>
-                                                        <td style="text-align:center">Washable and clean sticky pad</td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-                                        </td>
+                                        <td>Key Switches</td>
+                                        <td>You can use any switch that is compatible with cherry</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Small button</td>
+                                        <td>Use silicone key cap, feel more comfortable</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Non-slip Mat</td>
+                                        <td>Washable and clean sticky pad</td>
                                     </tr>
                                 </tbody>
                             </table>
