--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <hr style="margin-top: 70px;" />
 
         <div class="row" style="margin-top: 20px;">
-            <h1 class="animated fadeIn" style="margin-bottom: 50px; display:block">A <a class="animationdelay2s" id="gradient">keypad</a> is everything you need!</h1>
+            <h1 class="animated fadeIn textleft" style="margin-bottom: 50px; display:block">A <a class="animationdelay2s" id="gradient">keypad</a> is everything you need!</h1>
             <div class="col-md-6 animated2  fadeIn" style="display:block;">
                 <div class="row">
                     <div class="keypadall mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
