--- a/driver/index.html
+++ b/driver/index.html
@@ -19,9 +19,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="../bootstrap/js/bootstrap.min.js"></script>
     <script src="../script/kawaii.js"></script>
+
+    <script>
+        $(window).on('beforeunload', function () {
+            $(window).scrollTop(0);
+        });
+    </script>
 </head>
 <body>
-    <nav id="navbar" class="navigation navbar navbar-inverse navbar-fixed-top animated fadeInDown stickyfirst" role="navigation">
+    <nav id="navbar" class="navigation navbar navbar-inverse navbar-fixed-top animated3 fadeInDown stickyfirst" role="navigation">
         <div class="container" style="margin-top: 5px;">
             <div class="navbar-header left">
                 <a style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon" href="">
@@ -41,7 +47,7 @@
         </div>
     </nav>
 
-    <nav id="navbar2" class="dropnavigation navbar animated fadeInDown stickyfirst">
+    <nav id="navbar2" class="dropnavigation navbar animated3 fadeInDown stickyfirst">
         <a class="navbar-brand" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon" href="">
             <b>Antecer</b>
         </a>
@@ -65,7 +71,7 @@
 
     <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
         <div class="row">
-            <div class="col-md-4 animated bounceInLeft" style="display:block;">
+            <div class="col-md-4 animated fadeIn" style="display:block;">
                 <div class="row">
                     <div class="mx-auto d-block downloaddriver" style="justify-content: center; align-content: center; margin-bottom: auto;">
                         <h1 id="gradient">Downloads</h1>
@@ -77,7 +83,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-8 animated bounceInRight driverss" style="display:block;">
+            <div class="col-md-8 animated fadeIn driverss" style="display:block;">
                 <div class="row">
                     <div class="mx-auto d-block" style="justify-content: center; align-content: center; margin-bottom: auto;">
                         <img src="ui-1.jpg" style="width:45%;margin-bottom:5px;">
@@ -106,10 +112,5 @@
             </div>
         </div>
     </div>
-    <script>
-        $(document).ready(function () {
-            $(this).scrollTop(0);
-        });
-    </script>
 </body>
 </html>
