--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <div class="row">
                     <div class="mx-auto" style="justify-content: center; align-content: center; margin-bottom: auto; text-align: left !important;">
                         <div style="margin: 30px;">
-                            <p>When <strong>Steve</strong> doesnt know what to write. Then u gotta tell Steve what to do, unless you dont want anything on the site.</p>
+                            <p>When <strong>Steve</strong> doesn't know what to write. Then u gotta tell Steve what to do, unless you dont want anything on the site.</p>
                             <p><strong>Steve will do these things if u don't tell him what to do.:</strong></p>
                             <ul>
                                 <li>
