--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
         <div class="row" style="margin-top: 100px;">
             <div class="col-md-12 animated2 fadeIn" style="display:block;">
-                <h1 class="animated fadeIn" style="margin-bottom: 50px; display:block; text-align: center;">When <a class="animationdelay2s" id="gradient">Steve</a> doesnt know <a class="animationdelay2s" id="gradient">what</a> to do!</h1>
+                <h1 class="animated fadeIn" style="margin-bottom: 50px; display:block; text-align: center;">When <a class="animationdelay2s" id="gradient">Steve</a> doesn't know <a class="animationdelay2s" id="gradient">what</a> to do!</h1>
             </div>
         </div>
 
