--- a/customization/index.html
+++ b/customization/index.html
@@ -40,7 +40,7 @@
                 <ul class="navbar-right">
                     <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
                     <li><a href="#"><i class="fas fa-archive"></i>Products</a></li>
-                    <li><a href="/driver"><i class="fas fa-terminal"></i>Drivers</a></li>
+                    <li><a href="../driver"><i class="fas fa-terminal"></i>Drivers</a></li>
                     <li><a href="#"><i class="fas fa-palette"></i>Customization</a></li>
                     <li><a href="#"><i class="fas fa-file-signature"></i>Contact</a></li>
                 </ul>
@@ -59,7 +59,7 @@
             <ul class="navbar-right">
                 <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
                 <li><a href="#"><i class="fas fa-archive"></i>Products</a></li>
-                <li><a href="/driver"><i class="fas fa-terminal"></i>Drivers</a></li>
+                <li><a href="../driver"><i class="fas fa-terminal"></i>Drivers</a></li>
                 <li><a href="#"><i class="fas fa-palette"></i>Customization</a></li>
                 <li><a href="#"><i class="fas fa-file-signature"></i>Contact</a></li>
             </ul>
