--- a/driver/index.html
+++ b/driver/index.html
@@ -40,7 +40,7 @@
                     <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
                     <li><a href="#"><i class="fas fa-archive"></i>Products</a></li>
                     <li><a href="/driver"><i class="fas fa-terminal"></i>Drivers</a></li>
-                    <li><a href="#"><i class="fas fa-palette"></i>Customization</a></li>
+                    <li><a href="../customization"><i class="fas fa-palette"></i>Customization</a></li>
                     <li><a href="#"><i class="fas fa-file-signature"></i>Contact</a></li>
                 </ul>
             </div>
@@ -59,7 +59,7 @@
                 <li><a href="/"><i class="fas fa-home"></i>Home</a></li>
                 <li><a href="#"><i class="fas fa-archive"></i>Products</a></li>
                 <li><a href="/driver"><i class="fas fa-terminal"></i>Drivers</a></li>
-                <li><a href="#"><i class="fas fa-palette"></i>Customization</a></li>
+                <li><a href="../customization"><i class="fas fa-palette"></i>Customization</a></li>
                 <li><a href="#"><i class="fas fa-file-signature"></i>Contact</a></li>
             </ul>
         </div>
