--- a/customization/index.html
+++ b/customization/index.html
@@ -70,8 +70,8 @@
         <img src="../images/1.jpg" />
     </div>
 
-    <div class="customscale container animated2 fadeIn">
-        <div class="content" style="margin-top: 100px;">
+    <div class="customscale container animated2 fadeIn" style="margin-top: 100px;">
+        <div class="content">
             <div class="canvas">
                 <img id="canvas" src="" style="transform: translateX(0px) translateY(0px);">
                 <canvas imgsrc="" width="1080" height="710" style="position:absolute; left:0px; top:0px; background:transparent;"></canvas>
@@ -377,21 +377,5 @@
                 return data;
             }
         </script>
-
-        <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
-            <hr style="margin-top: 70px;" />
-            <div class="row">
-                <div class="col-md-12" style="display:block;">
-                    <div class="row">
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12" style="display:block;">
-                    <div class="row">
-                    </div>
-                </div>
-            </div>
-        </div>
 </body>
 </html>
