--- a/customization/index.html
+++ b/customization/index.html
@@ -31,7 +31,7 @@
     <nav id="navbar" class="navigation navbar navbar-inverse navbar-fixed-top animated3 fadeInDown stickyfirst" role="navigation">
         <div class="container" style="margin-top: 5px;">
             <div class="navbar-header left">
-                <a style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon" href="">
+                <a href="/" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon" href="">
                     <b>Antecer</b>
                 </a>
             </div>
@@ -49,7 +49,7 @@
     </nav>
 
     <nav id="navbar2" class="dropnavigation navbar animated3 fadeInDown stickyfirst">
-        <a class="navbar-brand" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon" href="">
+        <a href="/" class="navbar-brand" style="border-color: #fff !important; transition: color 0.3s ease; -webkit-transition: color 0.3s ease; -moz-transition: color 0.3s ease; animation: breathingwhite 3s linear infinite;" id="navicon" href="">
             <b>Antecer</b>
         </a>
         <a onclick="clicksticky();" data-toggle="collapse" data-target="#collapsibleNavbar">
