--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </nav>
 
-    <div class="banner-nav-img">
+    <div class="banner-nav-img animated fadeIn">
         <div class="container animated2 fadeIn" style="align-items: center; justify-content: center; text-align: center;">
             <div class="row">
 
